[package]
name = "seedphrase_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seedphrase_core = { path = "../seedphrase_core" }
poly = { git = "https://github.com/glotlabs/poly-rs" }
serde_json = "1.0.81"
url = { version = "2.3.1", features = ["serde"] }
